# codex

codex-rs/: Cargo.toml
codex-rs/agent-core/: Cargo.toml  standalone_test.rs
codex-rs/agent-core/examples/: multi_agent_demo.rs
codex-rs/agent-core/src/: agent.rs  capability.rs  coordinator.rs  error.rs  lib.rs  manager.rs  scheduler.rs  task.rs
codex-rs/agent-core/src/agents/: analysis_agent.rs  code_agent.rs  mod.rs  test_agent.rs
