[package]
name = "codex-agent-core"
version = { workspace = true }
edition = "2021"

[lib]
name = "codex_agent_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1.41"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2.0.12"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "multi_agent_demo"
path = "examples/multi_agent_demo.rs"
